tests/any_named_import/any_named_import.exp
Error ----------------------------------------------------------------------------------------------------- test.js:11:1

Cannot cast `Any3` to number because module `any` [1] is incompatible with number [2]. [incompatible-type]

   test.js:11:1
   11| Any3 as number; // error
       ^^^^

References:
   flow-typed/lib.js:1:16
    1| declare module 'any' {
                      ^^^^^ [1]
   test.js:11:9
   11| Any3 as number; // error
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:24:1

Cannot cast `Any6` to number because module `object` [1] is incompatible with number [2]. [incompatible-type]

   test.js:24:1
   24| Any6 as number; // error
       ^^^^

References:
   flow-typed/lib.js:5:16
    5| declare module 'object' {
                      ^^^^^^^^ [1]
   test.js:24:9
   24| Any6 as number; // error
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:28:9

Cannot import `x` because there is no `x` export in `string`. Did you mean `import x from "..."`? [missing-export]

   28| import {x as str_x, y as str_y} from "string"; // error
               ^


Error ---------------------------------------------------------------------------------------------------- test.js:28:21

Cannot import `y` because there is no `y` export in `string`. Did you mean `import y from "..."`? [missing-export]

   28| import {x as str_x, y as str_y} from "string"; // error
                           ^



Found 4 errors
